[package]
name = "stellaris_reader"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106",features=["derive"]}
time = { version = "0.2", features = ["serde"] }